assets/css/styles.css
:root {
  --purple: rgb(91 33 182);
  --lg-font-color: #FFF;
  --black: rgb(15 23 42);
  --border: 3px solid var(--purple);
}

header {
  display: flex;
  justify-content: space-between;
  background-color: var(--black);
  color: var(--purple);
  padding: 15px 50px;
}

header h1 {
  margin: 0;
  background-color: var(--purple);
  margin-left: -50px;
  padding: 5px 15px 0 15px;
  color: var(--black);
  border-radius: 0 5px 5px 0;
}

nav {
  display: flex;
  align-items: center;
  width: 40%;
}

nav ul {
  display: flex;
  justify-content: space-between;
  list-style: none;
  width: 100%;
}

nav ul li {
  display: inline;
}

nav ul li a {
  color: var(--purple);
  text-decoration: none;
}

nav ul li a:hover {
  color: pink;
}

main header {
  position: relative;
  background: linear-gradient(to bottom, rgba(128, 0, 128, .35), rgba(128, 0, 128, .35)), url('../images/hero-photo.28d4e53e_cropped.jpg');
  height: 365px;
  margin-bottom: 25px;
}

main header h2 {
  position: absolute;
  bottom: 0;
  right: 25px;
  background-color: var(--purple);
  font-size: 250%;
  margin: 10px -25px;
  padding-right: 25px;
  padding-left: 25px; 
  border-radius: 5px 0 0 5px;
}

.container {
  max-width: 75%;
  margin: 0 auto;
}

section {
  display: flex;
  flex-direction: row;
  margin-bottom: 25px;
}

section h3 {
  padding-right: 25px;
  width: 10%;
}

section article {
  border-left: var(--border);
  padding-left: 25px;
  width: 90%;
}

section article span {
  margin: 0 50px;
}

#work article {
  display:flex;
  flex-direction: column;
  align-items: center;
}

#work article div {
  display: flex;
}

#work article div figure {
  width: 50%;
}

#work a {
  width: 100%;
}

#work img {
  filter: brightness(.5);
  transition: all 300ms;
}

#work img:hover {
  filter: brightness(1);
  cursor: pointer;
  transition: all 300ms;
}

figure {
  margin: 25px 10px;
  border: 3px solid var(--purple);
  border-radius: 5px;
}

.contact-info {
  display: flex;
  align-items: center;
}

.contact-info p {
  margin: 0 50px;
}

article figure:first-child {
  display: flex;
}

article img:nth-child(1n + 2) {
  height: 250px;
}

article img:first-child {
  height: 100%;
  width: 100%;
}

article figure:first-child {
  margin-left: 0;
}

article figure:nth-child(2) {
  margin-right: 0;
}

article figure {
  position: relative;
  width: 100%;
}

figcaption, h2 {
  color: var(--lg-font-color);
}

article figure figcaption {
  font-size: 200%;
  position: absolute;
  bottom: 15px;
  right: 0;
  background-color: var(--purple);
  border-radius: 5px 0 0 5px;
  padding: 5px 10px;
}

@media screen and (max-width: 968px) {
  section {
    flex-direction: column;
    align-items: center;
  }

  section h3 {
    width: 85%;
    text-align: center;
    padding: 0;
  }

  section article {
    border-left: none;
    border-top: var(--border);
  }

  article div {
    flex-direction: column;
    align-items: center;
  }
  
  #work article div figure {
    width: 100%;
  }

  #contact article {
    display: flex;
    flex-direction: column;
  }

  #contact article p {
    margin: 10px 0;
  }
}

@media screen and (max-width: 768px) {
  header {
    flex-direction: column;
    align-items: center;
  }

  header h1 {
    text-align: center;
    border-radius: 0;
    margin-left: 0;
    width: 85%;
  }

  nav {
    width: 85%;
  }
  
  nav ul {
    flex-direction: column;
    align-items: center;
  }

  nav ul li {
    padding: 10px 0;
  }
}

